# mapbox-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  HOWTO.md  HTTP_TESTING_README.md  README.md  debug-test.js  deploy_to_cloud_run.sh  eslint.config.mjs  jest.config.js  jest.setup.js  package-lock.json  package.json  test-http-endpoint.js  test-http-simple.js  tsconfig.json
docs/: PERMISSIONS.md  binary-artifact-separation-guide.md  binary-artifact-separation-requirements.md  claude-code-http-setup.md  dual-channel-streaming-implementation.md  github-issue-dual-channel-streaming.md
mcp-client/: .env.example  .gitignore  README.md  pyproject.toml
mcp-client/examples/: __init__.py  basic_geocoding.py  location_search.py  route_planning.py
mcp-client/src/: __init__.py  auth.py  cli.py  mapbox_agent.py  mcp_client.py
mcp-client/tests/: __init__.py  cli_helpers.py  conftest.py  test_helpers.py
mcp-client/tests/agent/: __init__.py  test_agent_complex.py  test_agent_directions.py  test_agent_geocoding.py  test_agent_search.py
mcp-client/tests/integration/: README.md  __init__.py  test_auth.py  test_cli_e2e.py  test_cli_integration.py  test_cli_interactive.py  test_mcp_connection.py  test_tools.py
scripts/: client.ts  generate-jwt.js  test-http-endpoint.js
src/: index.ts
src/__tests__/: endToEndWorkflows.test.ts  errorScenarios.test.ts  httpEndpointIntegration.test.ts  toolRegistry.test.ts
src/__tests__/e2e/: performance.e2e.test.ts  sse.e2e.test.ts  (+1 more)
src/config/: environment.ts
src/server/: httpServer.ts  mcpHttpTransport.ts  mcpServerFactory.ts  sse-router.ts  stdioServer.ts  toolRegistry.ts
src/services/: artifact-storage.ts  auth.ts  binary-artifact-manager.ts  streaming-context.ts
src/tools/: MapboxApiBasedTool.test.ts  MapboxApiBasedTool.ts  schema-validation.test.ts  tool-naming-convention.test.ts
src/transport/: selector.ts  streaming-transport.ts
src/types/: fastify-sse-v2.d.ts  streaming-events.ts  transport.ts
src/utils/: errors.ts  httpClient.ts  logger.ts  requestUtils.testHelpers.ts  requestUtils.ts  shutdown.ts  versionUtils.ts
(+33 files in other folders)
